# clinical-rag-patient-qa

./: .env.example  .gitignore  IMPROVEMENTS_PLAN.md  LLAMAINDEX_PINECONE_MIGRATION_PLAN.md  PLAN.md  README.md  app.py  config.yaml  create_pinecone_index.py  ingest.py  inspect_template.py  pyproject.toml  setup.bat  start.bat  templates_config.yaml
.claude/: bug-tracker-state.json
.claude/plans/: BUG-001-plan.md  SESSIONS-OVERVIEW.md  session-1-privacy-safety.md  session-2-summary-generation.md  session-3-answers-routing.md  session-4-ops-cleanup.md
.claude/workflows/: implement-bug-fix.js
app/: config.py  logging_setup.py  main.py  setup.py
app/deidentification/: deid.py  ner.py  patterns.py  reid_map.py  validation.py
app/generation/: docx_builder.py  qa.py  summary_generator.py
app/ingestion/: adapter_a.py  adapter_b.py  pipeline.py
app/prompts/: extraction.py  generation.py  qa.py
app/query/: extractor.py  retrieval.py  router.py
app/storage/: db.py  models.py  pinecone_client.py
app/ui/: gradio_app.py
data/clients/diagnosis/: טמפליט אבחון בנים.docx
evaluation/: judge.py  runner.py
evaluation/ground_truth/: questions.json
scripts/: audit_egress.py  reset_and_reingest.py
src/: chunker.py  embeddings.py  pii_filter.py  pipeline.py
tamplates/: טמפליט אבחון בנות.docx  טמפליט אבחון בנים.docx  טמפליט תוכנית טיפול הדרכתי.docx
tests/: conftest.py  test_chunker.py  test_deid.py  test_embeddings.py  test_generate.py  test_ner.py  test_routing.py
tests/synthetic_data/: create_synthetic_docs.py
