[project]
name = "lesson2-rag-embedding"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annoy>=1.17.3",
    "anthropic>=0.109.2",
    "cohere>=7.0.4",
    "dotenv>=0.9.9",
    "gradio>=6.19.0",
    "llama-index>=0.14.22",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "llama-index-core>=0.11",
    "llama-index-vector-stores-pinecone",
    "llama-index-llms-anthropic",
    "pinecone-client>=3.0",
    "netfree-unstrict-ssl>=0.1.3",
]

[tool.uv]
